--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+
+                          <li> <b> [2020-11]</b> I'm delighted to be
+                            selected for a <b> 2021 ARC Discovery
+                            Early Career Researcher Award (DECRA)
+                            </b> to support my research on blockchain
+                            for the next three years!</li>
                           <li> <b> [2020-10]</b> I'm delighted to be
                             selected for a <b>2020 IBM Academic
                             Award</b>. This is covered
@@ -782,6 +788,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
               
               <li><b>Selected Recent Grant: </b>
                 <ul type="circle">
+                  <li>
+                    (Sole CI). A Scalable and Adaptive-Resilient
+                    Blockchain, AU$563,000 (AU$408,000 from ARC and
+                    AU$155,000 from Monash University), ARC DECRA,
+                    2021-2023.
+                  </li>
 	          <li> (Co-CI -- 34 CIs in total). Reliable Affordable
                   Clean Energy for 2030, AU$349,000,000, the 21st
                   round of the Cooperative Research Centre (CRC)
@@ -858,6 +870,10 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
               
 	      <li><b>Awards:</b><br>
 	        <ul type="circle">
+
+                  <li> <b>Discovery Early Career Researcher Award
+                  (DECRA)</b>, Australian Research Council (ARC),
+                  2021.
                   <li> <b>IBM Academic Award</b>, 2020. (Covered by <a href="https://www.monash.edu/it/about-us/news-and-events/latest/articles/2020/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Monash News</a> and <a href="https://cryptonews.com.au/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Crypto News</a>.)</li> 
                   <li> <b>Dean's Award for
                       Excellence in Research Impact
