--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
-
+                          <li> <b> [2020-07]</b> I'm delighted to
+                            serve as a PC member
+                            for <b><a href="https://icdcs2021.us">
+                            ICDCS'21</a></b>.</li>
                           <li> <b> [2020-11]</b> I'm delighted to be
                             selected for a <b> 2021 ARC Discovery
                             Early Career Researcher Award (DECRA)
@@ -1027,6 +1030,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 International Conference on Dependable
                                 Systems and Networks <b>(DSN)</b>
                               </li>
+                              <li>
+                                The 41st IEEE International Conference
+                                on Distributed Computing
+                                Systems <b>(ICDCS)</b>
+                              </li>
+
                               <li>
                               The 25th International Conference on
                               Financial Cryptography and Data
