added www paper and FAB pc

--- a/index.html
+++ b/index.html
@@ -165,6 +165,17 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2021-01]</b> Our paper "CollaEdge:
+                            A Decentralized Blockchain-based Platform
+                            for Cooperative Edge" is accepted for
+                            publication at <b> WWW'21</b>.
+                          </li>
+                            I'm delighted to serve as a PC member
+                            for <b><a href="https://scfab.github.io/2021/">
+                            FAB'21</a></b>.</li>
+                          <li> <b> [2021-01]</b> I'm delighted to serve as a PC member
+                            for <b><a href="https://scfab.github.io/2021/">
+                                FAB'21</a></b>.</li>
                           <li> <b> [2020-07]</b> I'm delighted to
                             serve as a PC member
                             for <b><a href="https://icdcs2021.us">
@@ -1050,6 +1061,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               </li>
                               <li>
                                 The 3rd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
+                              </li>
+                              <li>
+                                The 4th International Symposium on Foundations and Applications of Blockchain <b>(FAB)</b>
                               </li>
                             </ul>
                               <b>2020</b>
