--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2021-01]</b> Our paper "FPPW: A
+                            Fair and Privacy Preserving Watchtower For
+                            Bitcoin" is accepted for publication
+                            at <b> FC'21</b>.
+                          </li>
+
                           <li> <b> [2021-01]</b> Our paper "CollaEdge:
                             A Decentralized Blockchain-based Platform
                             for Cooperative Edge" is accepted for
