--- a/index.html
+++ b/index.html
@@ -524,7 +524,16 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 <br>
 	                    <li><b>Journal:</b><br>
                               <ol type="1" start = "2">
-
+                                <li> Lingjuan Lyu, Jiangshan Yu,
+                                Karthik Nandakumar, Yitong Li, Xingjun
+                                Ma, Jiong Jin, Han Yu, Kee Siong
+                                Ng. <br><b> <a href="https://arxiv.org/pdf/1906.01167.pdf">"Towards Fair and
+                                Privacy-Preserving Federated Deep
+                                Models"</a></b>. <br><i>IEEE Transactions
+                                on Parallel and Distributed
+                                Systems (<b>IEEE TPDS</b>).</i>
+                                2020.</li>
+                                
                                 <li>
                                   Jiangshan Yu, David Kozhaya, Jeremie
                                   Decouchant, and Paulo
@@ -576,7 +585,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                         <br>
 
 	                    <li><b>Conference:</b><br>
-                              <ol type="1" start = "6">
+                              <ol type="1" start = "7">
                                 <li>Tong Cao, Jiangshan Yu, Jeremie
                                   Decouchant, Xiapu Luo, Paulo
                                   Verissimo.<br> <b>Exploring the
