--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@ http://www.templatemo.com/tm-395-urbanic
                         Monash Cybersecurity Lab, and a Lecturer
                         (~US Assistant Professor) in the Faculty of
                         Information Technology
-                        at <a href="https://www.monash.edu"> Monash
+                        at <a href="https://research.monash.edu/en/persons/jiangshan-yu"> Monash
                           University</a>.
 
                         I received my PhD in Computer Science from the
                       University of Birmingham (UK), supervised
-                      by <a href="http://www.cs.bham.ac.uk/~mdr/">
+                      by <a href="https://scholar.google.co.uk/citations?user=zVGVpX4AAAAJ&hl=en">
                       Prof. Mark Ryan</a> (HP Inc. Chair in
                       Cybersecurity). I did my postdoc
                       with <a href="https://scholar.google.com/citations?user=aMHx8aUAAAAJ&hl=en">
