--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@ http://www.templatemo.com/tm-395-urbanic
                             at <b> FC'21</b>.
                           </li>
 
-                          <li> <b> [2021-01]</b> Our paper "CollaEdge:
+                          <li> <b> [2021-01]</b> Our paper "CoopEdge:
                             A Decentralized Blockchain-based Platform
-                            for Cooperative Edge" is accepted for
-                            publication at <b> WWW'21</b>.
+                            for Cooperative Edge Computing" is
+                            accepted for publication at <b>
+                            WWW'21</b>.
                           </li>
                           <li> <b> [2021-01]</b> I'm delighted to serve as a PC member
                             for <b><a href="https://scfab.github.io/2021/">
