--- a/index.html
+++ b/index.html
@@ -746,9 +746,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
               machine learning technology", Monash
               University. (Co-supervised with Joseph Liu and Lan
               Du).</li>
+            <li>Jun Zhao (2019), "Consolidating Hash Power in
+            Blockchain Shards with a Forest", Monash
+            University. (Co-supervised with Joseph Liu). (Now a PhD
+            student at Monash University.)</li>
+
 	    <li>
-              Pranav Kulkarni (2020), "Exploring energy-efficient RepuCoin",
-              Monash University.
+              Pranav Kulkarni (2020), "Exploring energy-efficient
+              RepuCoin", Monash University. (Now a PhD student at
+              Monash University.)
             </li>
             <li>
               Lianyang Yu (2020), "Game theoretic analysis on
