publications and service

--- a/index.html
+++ b/index.html
@@ -165,12 +165,23 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+
+                          <li> <b> [2021-03]</b> I'm delighted to
+                          serve as one of the Publicity Chairs for
+                          <b>IEEE Blockchain 2021</b>.</li>
+                          <li> <b> [2021-02]</b> Three papers (on the
+                          topic of blockchain interoperability and on
+                          analysing blockchain privacy) have been
+                            accepted by <b>ICBC'21</b>.</li>
+                          <li> <b> [2021-02]
+                            </b> Our paper on analysing 51&#37; attacks in
+                            the wild is accepted by <b> AsiaCCS'21
+                            </b>.</li>
                           <li> <b> [2021-01]</b> Our paper "FPPW: A
                             Fair and Privacy Preserving Watchtower For
                             Bitcoin" is accepted for publication
                             at <b> FC'21</b>.
                           </li>
-
                           <li> <b> [2021-01]</b> Our paper "CoopEdge:
                             A Decentralized Blockchain-based Platform
                             for Cooperative Edge Computing" is
@@ -1048,13 +1059,16 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <!--   Publicity Co-Chair International Conference on Information Security and Cryptology (Inscrypt) -->
                                 <!-- Provsec -->
                               <!--   </li> -->
-                              <li>
+                            
+                              <li> Publicity Co-Chair, IEEE Blockchain 2021.</li>
+                              <li> Publication Chair, ProvSec 2019.</li>
+                              <li> PC Co-Chair,
                                 <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th Meeting of the IFIP WG
                                 10.4 - Technological and societal
                                 challenges to blockchain dependability
                                 and security</a>, Clervaux, Luxembourg,
                                 2018.</li>
-                              <li>
+                              <li>PC Co-Chair,
                                   <a href="https://blockchainbirmingham.wordpress.com/">
                                   Workshop on BlockChain
                                 </a>, Birmingham, United Kingdom, 2015.</li>
