--- a/index.html
+++ b/index.html
@@ -1193,6 +1193,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Invited Reviewer (Selected Journal):</b><br>
 	                      <ul type="circle">
+                                <li><i> Proceedings of the IEEE </i></li>
                                 <li><i> ACM Computing Surveys </i></li>
                                 <li><i>IEEE Communications Surveys and Tutorials</i></li>
                                 <li><i> ACM Transactions on Transactions on Privacy and Security <b>(ACM TOPS)</b></i></li>
