--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ http://www.templatemo.com/tm-395-urbanic
         <title>Jiangshan</title> <meta name="keywords" content="Jiangshan Yu,
         information security, privacy, 于江山, 信息安全" />
         <meta name="description" content="Homed page of Dr. Jiangshan Yu, Monash University, Australia.">
-        <meta name="image"  content="https://www.jiangshanyu.com/images/J-Yu.jpg">
+         <meta property="og:image" content="https://www.jiangshanyu.com/images/J-Yu.jpg">
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
