--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ http://www.templatemo.com/tm-395-urbanic
 
 <html lang="en">
     <head>
-        <title>Jiangshan</title> <meta name="keywords" content="Jiangshan Yu,
+        <title>Jiangshan Yu</title> <meta name="keywords" content="Jiangshan Yu,
         information security, privacy, 于江山, 信息安全" />
         <meta name="description" content="Homed page of Dr. Jiangshan Yu, Monash University, Australia.">
          <meta property="og:image" content="https://www.jiangshanyu.com/images/J-Yu.jpg">
