--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@ http://www.templatemo.com/tm-395-urbanic
     <head>
         <title>Jiangshan Yu</title> <meta name="keywords" content="Jiangshan Yu,
         information security, privacy, 于江山, 信息安全" />
-        <meta name="description" content="Homed page of Dr. Jiangshan Yu, Monash University, Australia.">
-         <meta property="og:image" content="https://www.jiangshanyu.com/images/J-Yu.jpg">
+        <meta property="og:url" content="https://www.jiangshanyu.com" />
+        <meta property="og:description" content="Homed page of Dr. Jiangshan Yu, Monash University, Australia.">
+        <meta property="og:image" content="https://www.jiangshanyu.com/images/J-Yu.jpg">
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
