--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ http://www.templatemo.com/tm-395-urbanic
 <html lang="en">
     <head>
         <title>Jiangshan Yu</title> <meta name="keywords" content="Jiangshan Yu,
-        information security, privacy, 于江山, 信息安全" />
-        <meta property="og:url" content="https://www.jiangshanyu.com" />
+        information security, privacy, 于江山, 信息安全">
         <meta property="og:description" content="Homed page of Dr. Jiangshan Yu, Monash University, Australia.">
         <meta property="og:image" content="https://www.jiangshanyu.com/images/J-Yu.jpg">
 
