--- a/index.html
+++ b/index.html
@@ -116,36 +116,31 @@ http://www.templatemo.com/tm-395-urbanic
                       </div>
                       <div class="clearfix"></div>
                       </div>
-                      <p> <font size="5"> <b>Jiangshan Yu (于江山)</b></font></p>
-                      <p><font size="3"><b>ARC DECRA Fellow <br>
-                        Senior Lecturer (<a href="https://en.wikipedia.org/wiki/Senior_lecturer">equiv.</a> Associate Professor in US)<br>
-                        Monash Blockchain Technology Centre<br>
-                        Faculty of Information Technology<br>
-                            Monash University, Australia.</b></font>
+                      <p> <font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
+                      <p><b>Senior Lecturer (<a href="https://en.wikipedia.org/wiki/Senior_lecturer">equiv.</a> Associate Professor in US)<br>
+                            ARC DECRA Fellow <br><br>
+                          Monash Blockchain Technology Centre<br>
+                          Department of Software Systems and Cybersecurity<br>
+                          Monash University, Australia.</b></font>
                       </p>
                     <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
-                      <p> I'm Associate Director (Research) at Monash
-                        Blockchain Technology Centre, a member of the
-                        Monash Cybersecurity Lab, and a Senior Lecturer
-                        (~US Associate Professor) in the Faculty of
-                        Information Technology
-                        at <a href="https://research.monash.edu/en/persons/jiangshan-yu"> Monash
-                          University</a>.
+                        <p> Dr. Jiangshan Yu is a 2021 ARC DECRA
+                           Fellow and Senior Lecturer (~US Associate
+                           Professor) at Monash University. He also
+                           serves as Associate Director (Research) at
+                           Monash Blockchain Technology Centre.
 
-                        I received my PhD in Computer Science from the
-                      University of Birmingham (UK), supervised
+                        He received his PhD in Computer Science from
+                      the University of Birmingham (UK), supervised
                       by <a href="https://scholar.google.co.uk/citations?user=zVGVpX4AAAAJ&hl=en">
                       Prof. Mark Ryan</a> (HP Inc. Chair in
-                      Cybersecurity). I did my postdoc
+                      Cybersecurity), followed by a postdoc
                       with <a href="https://scholar.google.com/citations?user=aMHx8aUAAAAJ&hl=en">
                       Prof. Paulo Esteves-Verissimo
                           </a>(IEEE and ACM Fellow) at SnT, University
-                      of Luxembourg. <br><br> My research interests
-                      are in the area of cybersecurity. In particular,
-                      the focus of my research has been on (designing
-                      and attacking) blockchain systems, user privacy,
-                      cryptographic key management, and ledger-based
-                      applications.<br><br>
+                      of Luxembourg. <br><br> His research interests
+                      are in the broad area of cybersecurity, with a
+                      recent focus on blockchain systems.<br><br>
 
 
                       <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
