--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li>
                                 The 4th International Symposium on Foundations and Applications of Blockchain <b>(FAB)</b>
                               </li>
+                              <li>
+                                The 20th IEEE International Conference
+                                on Trust, Security and Privacy in
+                                Computing and
+                                Communications <b>(TrustCom)</b> </li>
                             </ul>
                               <b>2020</b>
                               <ul type="circle">
