--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 on Trust, Security and Privacy in
                                 Computing and
                                 Communications <b>(TrustCom)</b> </li>
+                              <li> The 17th International Conference on Mobility, Sensing and Networking <b>(MSN)</b></li>
                             </ul>
                               <b>2020</b>
                               <ul type="circle">
