--- a/index.html
+++ b/index.html
@@ -1205,14 +1205,16 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li><i> ACM Computing Surveys </i></li>
                                 <li><i>IEEE Communications Surveys and Tutorials</i></li>
                                 <li><i> ACM Transactions on Transactions on Privacy and Security <b>(ACM TOPS)</b></i></li>
-	                        <li><i>IEEE
-	                        Transactions on Information Forensics &
-	                            Security <b>(IEEE TIFS)</b></i></li>
+	                        <li><i>IEEE Transactions on
+	                        Information Forensics &
+	                        Security <b>(IEEE TIFS)</b></i></li>
                                 <li><i>IEEE Transactions on
 	                            Computers <b>(IEEE TC)</b></i></li>
                                 <li><i>
                                       IEEE Transactions on Dependable and Secure Computing <b>(IEEE TDSC)</b>
                                 </i></li>
+                                <li><i>
+                                    IEEE/ACM Transactions on Networking <b>(TON)</b></i></li>
                                 <li><i> IEEE Internet of Things Journal</i> <b>(IoT-J)</b></li>
                                 <li><i>
                                       IEEE Transactions on Cloud
