--- a/index.html
+++ b/index.html
@@ -161,10 +161,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
-
+                          <li> <b> [2021-06]</b> I'm delighted to
+                              serve as a PC member for <b>DSN'22</b>.</li>
                           <li> <b> [2021-03]</b> I'm delighted to
                           serve as one of the Publicity Chairs for
-                          <b>IEEE Blockchain 2021</b>.</li>
+                          <b>IEEE Blockchain 2021</b>
+                          and <b>GreenCom'21</b>.</li>
                           <li> <b> [2021-02]</b> Three papers (on the
                           topic of blockchain interoperability and on
                           analysing blockchain privacy) have been
@@ -187,7 +189,7 @@ http://www.templatemo.com/tm-395-urbanic
                           <li> <b> [2021-01]</b> I'm delighted to serve as a PC member
                             for <b><a href="https://scfab.github.io/2021/">
                                 FAB'21</a></b>.</li>
-                          <li> <b> [2020-07]</b> I'm delighted to
+                          <li> <b> [2020-11]</b> I'm delighted to
                             serve as a PC member
                             for <b><a href="https://icdcs2021.us">
                             ICDCS'21</a></b>.</li>
@@ -1062,7 +1064,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <!-- Provsec -->
                               <!--   </li> -->
                             
+
                               <li> Publicity Co-Chair, IEEE Blockchain 2021.</li>
+                              <li> Publicity Co-Chair, IEEE GreenCom 2021.</li>
                               <li> Publication Chair, ProvSec 2019.</li>
                               <li> PC Co-Chair,
                                 <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th Meeting of the IFIP WG
@@ -1076,6 +1080,14 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
                             <li><b>Conference Program Committee Member</b></li>
+                            <b>2022</b>
+                            <ul type="circle">
+                              <li>
+                                The 52nd Annual IEEE/IFIP
+                                International Conference on Dependable
+                                Systems and Networks <b>(DSN)</b>
+                              </li>
+                            </ul>
                             <b>2021</b>
                             <ul type="circle">
                               <li>
